fixed overlap bug on results screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -283,8 +283,8 @@ legend {
 }
 
     #suggestion-p {
-        font-size: 0.85em;
-        padding: 10px 0 10px 0;
+        font-size: 0.75em;
+        padding: 5px 0 5px 0;
    }
     #quiz-reset {
         top: 685px;
